--- a/ux.html
+++ b/ux.html
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -203,7 +203,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -298,7 +298,7 @@ or check?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -360,7 +360,7 @@ data?...</p>
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -467,7 +467,7 @@ uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
 <p>7. Juli 2019 ... Front-End Developer (m/w/x). Frankfurt, GermanyEmployee. NEUGELB Studios 
 logo. Senior UX-Designer (m/w/x). Frankfurt, GermanyEmployee. allen Stellen?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/findora/9eab6981-6a1c-4142-9158-097e6fbf2558'>Findora - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/findora/9eab6981-6a1c-4142-9158-097e6fbf2558'>Findora - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
